--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 .Rdata
 .httr-oauth
 .DS_Store
-'~/My Web Sites/topfiftyone/_posts/2023-09-13-2023-week-1-observations/data/wk1prg23.csv' 
+'~/My Web Sites/topfiftyone/_posts/2023-09-13-2023-week-1-observations/data/wk1prg23.csv'
+jan324.RData
+.RDataTmp
